# cashflow-forecast-

./: .gitignore  Makefile  create_datest.py  main.py  pyproject.toml  run_optuna.py  run_task.py
configs/data/: 300040185.yml  all.yml
configs/experiments/: ag.yml  catboost.yml  dummy.yml  lgbm.yml  xgboost.yml  xgboost_optuna.yml
configs/models/: ag.yml  catboost.yml  dummy.yml  lgbm.yml  xgboost.yml  xgboost_optuna.yml
configs/validation_methods/: sliding_window_3m_val_3m_gap_5_folds.yml
data/: .gitignore
data/raw/: baseline.csv
src/: pipeline.py  pipeline_optuna.py
src/configs/: __init__.py  _base.py  _data.py  _experiment.py  _model.py  _validation_method.py
src/models/: ag.py  base.py  catboost.py  dummy.py  lgbm.py  xgboost.py
src/tasks/: __init__.py  _base.py  _load_config.py  _optuna.py  _train.py
src/tasks/preprocess/: __init__.py  _pipeline.py  _preprocess_before_split.py
src/utils/: figure.py  preprocess.py  splitters.py
